--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "gulp-concat": "2.5.2",
     "gulp-rename": "1.2.2",
     "gulp-uglify": "1.2.0",
+    "gulp-sourcemaps": "1.5.2",
     "bower": "1.4.1"
   }
 }
