add proper licensing to build system

--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,6 @@
   "name": "sim-shim-js",
   "dependencies": {
     "mathjs": "http://cdnjs.cloudflare.com/ajax/libs/mathjs/3.2.1/math.js",
-    "threejs": "https://raw.githubusercontent.com/mrdoob/three.js/master/build/three.js"
+    "threejs": "http://cdnjs.cloudflare.com/ajax/libs/three.js/r78/three.js"
   }
 }
