--- a/package.json
+++ b/package.json
@@ -1,10 +1,45 @@
 {
-  "name": "sim-shim-js",
-  "version": "0.0.1",
+  "name": "sim-shim",
+  "description": "3D plotting, animation, and simulation using webGL",
+  "author": "John Meade <john.meade@hbar.ca>",
+  "version": "0.1.0",
+  "main": "dist/sim-shim-bundle.js",
+  "analyze": true,
+  "license": "MIT",
+
+  "keywords": [
+    "3D",
+    "plotting",
+    "animation",
+    "simulation",
+    "webgl",
+    "surface"
+  ],
+
+  "scripts": {
+    "prepublish": "npm run buildall",
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "buildall": "echo [ BUILDING DEV ] && echo && webpack && echo && echo [ BUILDING PRODUCTION ] && echo && MINIFY=1 webpack"
+  },
+
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codemaker1999/sim-shim-js"
+  },
+
   "devDependencies": {
-    "bower": "1.4.1",
-    "brunch": "^2.0",
-    "babel-brunch": "^6.0",
-    "uglify-js-brunch": "^2.0"
+    "webpack": "^1.13.2",
+    "webpack-append": "^0.1.2",
+    "babel": "^6.5.2",
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.5"
+  },
+
+  "dependencies": {
+    "mathjs": "^3.4.1",
+    "three": "^0.79.0",
+    "chai": "^3.5.0"
   }
+
 }
