refactor SimShimPlot to SimShimObj with better API, added doc support with bad coverage

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sim-shim",
   "description": "3D plotting, animation, and simulation using webGL",
   "author": "John Meade <john.meade@hbar.ca>",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "dist/sim-shim-bundle.js",
   "analyze": true,
   "license": "MIT",
@@ -17,7 +17,6 @@
   ],
 
   "scripts": {
-    "prepublish": "npm run buildall",
     "build": "webpack",
     "watch": "webpack --watch",
     "buildall": "echo [ BUILDING DEV ] && echo && webpack && echo && echo [ BUILDING PRODUCTION ] && echo && MINIFY=1 webpack"
@@ -33,13 +32,14 @@
     "webpack-append": "^0.1.2",
     "babel": "^6.5.2",
     "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.5"
+    "babel-loader": "^6.2.5",
+    "esdoc": "^0.4.8",
+    "mathjs": "^3.4.1",
+    "three": "^0.79.0",
+    "throwable": "^1.0.3"
   },
 
   "dependencies": {
-    "mathjs": "^3.4.1",
-    "three": "^0.79.0",
-    "chai": "^3.5.0"
   }
 
 }
